--- a/public/css/index.less
+++ b/public/css/index.less
@@ -187,6 +187,9 @@ a {
     clear:both;
     padding-top:1em;
     text-transform: uppercase;
+    h1, h2 {
+        font-size: 1.5em;
+    }
 
     .column {
         padding: 0.5em 0;
