--- a/public/css/map.less
+++ b/public/css/map.less
@@ -31,8 +31,8 @@
   position: absolute;
   // left: 10px;
   // top: 10px;
-  margin-top: 10px;
-  margin-left: 10px;
+  margin-top: 5px;
+  margin-left: 5px;
   width: @detail-width;
   max-height:80%;
   overflow: hidden;
@@ -46,7 +46,7 @@
   //.border-bottom-radius(20px);
   .title {
     text-align: center;
-    height: 60px;
+    height: 40px;
     background-color: @title-bg;
     color: white;
     padding: 0;
@@ -60,14 +60,14 @@
     #home {
       float: left;
       max-height: 40px;
-      margin: 10px;
+      margin: 5px;
     }
     h2 {
       display: inline;
       font-family: @title-font;
-      font-size: 24px;
+      font-size: 1.5em;
       font-weight: normal;
-      line-height: 60px;
+      line-height: 40px;
       letter-spacing: 0.1em;
       max-width: 50%;
       padding: 0;
