--- a/public/css/index.less
+++ b/public/css/index.less
@@ -98,27 +98,58 @@ a {
     };
     #nav 
     {
+            font-family: @body-bold;
+            text-transform: uppercase;
+            text-decoration: none;
+            color:#000;
+            font-size: 1.2em;
+
         float:right;   
         text-align: right;
-   // height:3em;
-   width:70%;
-   padding-top: 0.6em;
-   a {
-        //font-family: 'futuramedium', sans-serif;
-        display: inline-block;
-        font-family: @body-bold;
-        text-transform: uppercase;
-        text-decoration: none;
-        color:#000;
-        font-size: 1.5em;
-        padding-left: 7%;
-    }
-    a:nth-child(1) {padding: 0;}
+        width:70%;
+        margin-top: 2.2em;
+        li:hover ul {
+            display:block;
+        }
+        li {
+            list-style: none;
+            display: inline;
+            margin-left: 12%;
+            position:relative;
+            ul { 
+                display:none;
+                text-align: center;
+                position:absolute;
+                margin: 0 0 0 -50%;
+                padding: 0;
+                color:#fff;
+                li {
+                    width:9em;
+                    padding:0;
+                    margin:3px 1px;
+                    display: block;
+                    
+                    background-color: #000;
+
+                    a {
+                        color:#fff;
+                    }
+                }
+                li:hover {
+                    background-color: #64C4B8;
+                }
+            }
+        }
+        a {
+
+        }
+        li:nth-child(1) {margin: 0;}
+
+//    a:hover {padding: 0;}
 }
 
 
 // #banner-text {
-//     paddingon:abso5te;
 //     top:25%;
 //     left:37%;
 //     width:26%;
@@ -138,16 +169,10 @@ a {
    // clear:both;
    // margin:auto;
     //width:95%;
-    height:400px;
+   // height:px;
    // max-width: 945px;
     //max-height:px;
-     #map {
-    //    float:left;
-        width: 100%;
-        height: 100%;
-        max-width: 945px;
-        position: absolute !important; // need !mportant for firefox
-    }
+
 }
 #banner header {
     float:left;
