--- a/public/css/map.less
+++ b/public/css/map.less
@@ -163,6 +163,8 @@
     }
   }
   .navigation {
+    bottom: 0;
+    position: absolute;
     .user-select(none);
     span {
       background-color: rgba(255, 255, 255, 0.90);
