--- a/public/css/map.less
+++ b/public/css/map.less
@@ -3,7 +3,8 @@
 
 @import "normalize.less";
 @import "preboot.less";
-@import "fonts.less";
+//@import "fonts.less";
+@import "index.less";
 
 // CONSTANTS
 
@@ -28,13 +29,13 @@
 
      #map {
 
-      //  float:left;
-        //left:@detail-width;
-        //width: 98% - @detail-width;
         height: 100%;
-        //margin-left:20px;
-    //    max-width: 945px;
-       // position: absolute !important; // need !mportant for firefox
+        #daynight {
+          position: absolute;
+          top:10px;
+          right: 10px;
+          z-index: 100;
+        }
     }
     #sidebar {
       height:100%;
@@ -47,7 +48,7 @@
   background-color: #FFF;
   bottom:0;
   top:0;
-  padding:5px;
+  //padding:5px;
   overflow: hidden;
   border:10px solid #bbbdbf;
   font-family: @body-font;
@@ -55,8 +56,8 @@
   .title {
     text-align: center;
     height: 40px;
-    background-color: @title-bg;
-    color: white;
+//    background-color: @title-bg;
+    color:@black-text;
     padding: 0;
     overflow: hidden;
     // cursor: grab;
@@ -102,7 +103,7 @@
     // .user-select(none);
     max-width: 100%;
     height:128px;
-    background-color: rgba(58, 58, 63, 0.85);
+    //background-color: rgba(58, 58, 63, 0.85);
     text-align: center;
     img {
       max-height: 100%;
@@ -111,7 +112,7 @@
   }
   .info {
     //background-color: rgba(255, 255, 255, 0.90);
-    //padding: 0 30px;
+    padding: 5px;
     .buttons {
       height: 60px;
       .address {
@@ -157,9 +158,10 @@
       }
     }
     .description {
-      height: 160px;
-      line-height: 160%;
+      //height: 160px;
+      //line-height: 160%;
 //      overflow: auto;
+      font-size: 0.8571em;
     }
   }
   .navigation {
