markers with numbers

--- a/public/css/index.less
+++ b/public/css/index.less
@@ -5,7 +5,7 @@
 // CONSTANTS
 
 @background:            #dcdcdc;
-@container-width:       945px;
+@container-width:       1024px;
 
 
 // TYPOGRAPHY PRESETS
@@ -177,8 +177,8 @@ a {
 #banner header {
     float:left;
     width: 100%;
-    max-width: 945px;
-    max-height:400px;
+    max-width: @container-width;
+    //max-height:400px;
     img {
         width:100%;
     }
