--- a/public/css/map.less
+++ b/public/css/map.less
@@ -26,23 +26,87 @@
 // moved to map.html because these elements were being rendered slower than less.js can process it.
 
 // OVERLAY
-
-     #map {
-
-        height: 100%;
-        #daynight {
-          position: absolute;
-          top:10px;
-          right: 10px;
-          z-index: 100;
-        }
+.default-icon {
+  background: none;
+  border:none;
+  background-image:url('../img/marker.png');
+  background-size: 100% 100%; 
+  font-family: @title-font;
+  font-size: 24px;
+  text-align: center;
+  padding-top:.2em;
+  color: #FFF;
+}
+.selected-icon {
+  background: none;
+  border:none;
+  background-image:url('../img/marker_highlight.png');
+  background-size: 100% 100%; 
+  font-family: @title-font;
+  font-size: 24px;
+  text-align: center;
+  padding-top:.2em;
+  color: #FFF;
+}
+html {
+  color:@black-text;
+  line-height: normal;
+}
+ol, ul {
+  margin: 0;
+  padding: 0;
+}
+#map {
+  height: 100%;
+  #daynight {
+    position: absolute;
+    top:10px;
+    right: 10px;
+    z-index: 100;
+  }
+}
+#sidebar {
+  font-family: @title-font;
+  font-size: 1.5em;
+  height:100%;
+  position: absolute;
+ // background-color: #bbbdbf;
+  // padding: 10px;
+  #sidebar-list {
+    position:absolute;
+    bottom:0;
+    width:100%;
+    li {
+      font-family: @title-font;
+      text-transform: uppercase;
+      font-size: 1.14285714286em;
+      position: relative;
+      display: block;
+      height:2em;
+      border-bottom:1px solid #bbbdbf;
+      vertical-align: center;
+     // width:100%;
     }
-    #sidebar {
-      height:100%;
-      position: absolute;
-      background-color: #bbbdbf;
-     // padding: 10px;
+    .list-number {
+      width:2em;
+      height:2em;
+      border-radius: 50%;
+      border:1px solid #bbbdbf;
+      padding:0.2em;
+      margin:0.2em;
+      text-align: center;
+      vertical-align: center;
     }
+    .arrow {
+      position:absolute;
+      right:0;
+      max-height: 1em;
+      img {
+        max-height: 100%;
+      }
+    }
+  }
+}
 #detailview {
   position: absolute;
   background-color: #FFF;
