sidebar list buttons

--- a/public/css/index.less
+++ b/public/css/index.less
@@ -114,6 +114,7 @@ a {
             z-index: 99;
         }
         li {
+            cursor:pointer;
             list-style: none;
             display: inline;
             margin-left: 12%;
@@ -145,7 +146,7 @@ a {
         }
         li:nth-child(1) {margin: 0;}
 
-//    a:hover {padding: 0;}
+        //    a:hover {padding: 0;}
 }
 
 
