--- a/public/css/map.less
+++ b/public/css/map.less
@@ -229,6 +229,7 @@ ol, ul {
         text-align: center;
         padding-top: 10px;
         span {
+          vertical-align: bottom;
           display: block;
           float: right;
           width: 30px;
