--- a/public/css/index.less
+++ b/public/css/index.less
@@ -1,5 +1,5 @@
-@import "normalize.less";
-@import "preboot.less";
+//@import "normalize.less";
+//@import "preboot.less";
 @import "fonts.less";
 
 // CONSTANTS
@@ -122,8 +122,9 @@ a {
             ul { 
                 display:none;
                 text-align: center;
+                left:-2.25em;
                 position:absolute;
-                margin: 0 0 0 -50%;
+                //margin: 0 0 0 -50%;
                 padding: 0;
                 color:#fff;
                 li {
