--- a/public/css/map.less
+++ b/public/css/map.less
@@ -59,6 +59,7 @@ ol, ul {
 #map {
   height: 100%;
   #daynight {
+    cursor:pointer;
     position: absolute;
     top:10px;
     right: 10px;
@@ -76,6 +77,7 @@ ol, ul {
     position:absolute;
     width:100%;
    // height:50%;
+   font-size: 80%;
     bottom:0;
     li {
       cursor:pointer;
@@ -118,10 +120,7 @@ ol, ul {
         background-image:url("../img/ui/arrow_gray.png");
         background-size: 100% 100%; 
     //    vertical-align: middle;
-        img {
-          max-height: 100%;
-          display:none;
-        }
+       
       }
     }
     li.selected {
@@ -133,9 +132,7 @@ ol, ul {
       .arrow {
         background-image:url("../img/ui/arrow_white.png");
         background-size: 100% 100%; 
-        img {
-          display: none;
-        }
+        
       }
     }
   }
@@ -182,25 +179,11 @@ ol, ul {
       vertical-align: baseline;
     }
 
-    .routename {
-      text-transform: uppercase;
-      float:right;
-     // right:0;
-      color:#86c5b2;
-      font-family: @body-font;
-      font-size: 12px;
-    //  font-weight: normal;
-    //  text-align: right;
-      padding: 0;
-      font-size: 12px;
-      max-width: 25%;
-      margin:25px 20px 0 0;
-    }
   }
   .photo {
     // .user-select(none);
     max-width: 100%;
-    height:128px;
+    max-height:160px;
     //background-color: rgba(58, 58, 63, 0.85);
     text-align: center;
     img {
@@ -211,35 +194,38 @@ ol, ul {
   .info {
     //background-color: rgba(255, 255, 255, 0.90);
     padding: 5px;
-    .buttons {
+    // .buttons {
       height: 60px;
       .address {
         width: 50%;
         float: left;
-        font-size: 12px;
+        font-size: 1em;
         font-family: @body-bold;
         //font-weight: bold;
         padding-top: 20px;
       }
       .icons {
-      //  .user-select(none);
+        .user-select(none);
         width: 50%;
         position: absolute;
-        right: 15px;
+        right: 5%;
         text-align: center;
         padding-top: 10px;
         span {
-          vertical-align: bottom;
-          display: block;
+         // width: 20px;
+          //vertical-align: bottom;
+          display: inline-block;
           float: right;
           width: 30px;
-          height: 30px;
           padding-top: 30px;
           font-size: 10px;
-          line-height: 10px;
-          margin: 0 15px;
-          background-size: 100% 100%;
+        //  line-height: 10px;
+          margin: 0 5px;
+          background-size: 30px 30px;
+          background-repeat: no-repeat;
         }
+
+
         .icon-views {
           background-image: url('../img/ui/views.png');
         }
@@ -262,7 +248,7 @@ ol, ul {
       //line-height: 160%;
 //      overflow: auto;
       font-size: 0.8571em;
-    }
+    // }
   }
   .navigation {
     bottom: 0;
