--- a/public/css/map.less
+++ b/public/css/map.less
@@ -220,7 +220,7 @@ ol, ul {
           padding-top: 30px;
           font-size: 10px;
         //  line-height: 10px;
-          margin: 0 5px;
+          margin: 0 10px;
           background-size: 30px 30px;
           background-repeat: no-repeat;
         }
@@ -240,6 +240,9 @@ ol, ul {
         }
         .icon-food {
           background-image: url('../img/ui/food.png');
+        }
+        .icon-dogs {
+          background-image: url('../img/ui/dogs.png');
         }
       }
     }
