--- a/public/css/map.less
+++ b/public/css/map.less
@@ -238,11 +238,20 @@ ol, ul {
         .icon-outdoor {
           background-image: url('../img/ui/outdoor.png');
         }
+        .icon-indoor {
+          background-image: url('../img/ui/indoor.png');
+        }
         .icon-food {
           background-image: url('../img/ui/food.png');
         }
         .icon-dogs {
           background-image: url('../img/ui/dogs.png');
+        }
+        .icon-food {
+          background-image: url('../img/ui/food.png');
+        }
+        .icon-wifi {
+          background-image: url('../img/ui/wifi.png');
         }
       }
     }
