--- a/public/css/map.less
+++ b/public/css/map.less
@@ -58,6 +58,7 @@ ol, ul {
 }
 #map {
   height: 100%;
+  width:70%;
   #daynight {
     cursor:pointer;
     position: absolute;
@@ -71,6 +72,7 @@ ol, ul {
   font-size: 1.5em;
   height:100%;
   position: absolute;
+  width:30%;
   // background-color: #bbbdbf;
   // padding: 10px;
   #sidebar-list {
