--- a/public/css/index.less
+++ b/public/css/index.less
@@ -242,12 +242,29 @@ ol, ul {
   //width:30%;
   // background-color: #bbbdbf;
   // padding: 10px;
+  #place {
+    position: absolute;
+    max-height:50%;
+    //overflow-y: hidden;
+    width: 100%;
+    .description {
+      height: 40%;
+      overflow-y: auto;
+      font-size: 0.8571em;
+      padding: 0 .5em;
+      height: 9em;
+      p {
+        margin: 0;
+      }
+    }
+  }
   #sidebar-list {
     position:absolute;
     width:100%;
-   // height:50%;
-   font-size: 80%;
+    max-height:50%;
+    font-size: 80%;
     bottom:0;
+    overflow-y: auto;
     li {
       cursor:pointer;
       padding: .5em .25em;
@@ -269,11 +286,11 @@ ol, ul {
         text-align: center;
      //   vertical-align: middle;
         margin:0 0.5em;
-        padding-top: 0.16em
+        padding-top: 0.16em;
       
       }
       .list-item {
-        padding-top: 0.16em
+        padding-top: 0.16em;
         position:absolute;
         display:inline-block;
         vertical-align: middle;
@@ -312,6 +329,7 @@ ol, ul {
   background-color: #FFF;
   bottom:0;
   top:0;
+  width:100%;
   //padding:5px;
   overflow: hidden;
   border:10px solid #bbbdbf;
@@ -363,9 +381,9 @@ ol, ul {
   }
   .info {
     //background-color: rgba(255, 255, 255, 0.90);
-    padding: 5px;
+    padding: 0.5em;
     // .buttons {
-      height: 60px;
+      //min-height: 60px;
       .address {
         width: 50%;
         float: left;
@@ -425,13 +443,7 @@ ol, ul {
         }
       }
     }
-    .description {
-      //height: 160px;
-      //line-height: 160%;
-//      overflow: auto;
-      font-size: 0.8571em;
-    // }
-  }
+
   // .navigation {
   //   bottom: 0;
   //   position: absolute;
