pulling route lines from database, kupdated jquery.min

--- a/public/css/index.less
+++ b/public/css/index.less
@@ -514,6 +514,7 @@ ol, ul {
     }
 }
 #howto-and-about {
+    padding-top: 1em;
     .howto-img {
         float:left;
         display: inline-block;
@@ -530,8 +531,8 @@ ol, ul {
     }
 }
 
-#news_and_updates {
-    //margin: 3em 0;
+#news-and-updates {
+    padding-top: 1em;
     a {
         color: #777;
         text-decoration: none;
@@ -668,7 +669,7 @@ px      68    160    252    */
         max-width: 90%;
     }
 }
-#news_and_updates .column {
+#news-and-updates .column {
     max-width:44%;
     min-width:200px;
     padding:2%;
@@ -685,7 +686,7 @@ cols    1     2      3      4      5
 px      68    160    252    344    436    */
 
 @media only screen and (max-width: 480px) {
-    #news_and_updates .column {
+    #news-and-updates .column {
         max-width:100%;
         padding:3%;
         text-align: center;
