--- a/public/css/fonts.less
+++ b/public/css/fonts.less
@@ -1,46 +1,3 @@
-@font-face {
-    font-family: 'futura_mdcn_btmedium';
-    src: url('fonts/futurabt-mediumcondensed.eot');
-    src: url('fonts/futurabt-mediumcondensed.eot?#iefix') format('embedded-opentype'),
-    url('fonts/futurabt-mediumcondensed.woff') format('woff'),
-    url('fonts/futurabt-mediumcondensed.ttf') format('truetype'),
-    url('fonts/futurabt-mediumcondensed.svg#futura_mdcn_btmedium') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'futura_md_btmedium';
-    src: url('fonts/futura_medium-webfont.eot');
-    src: url('fonts/futura_medium-webfont.eot?#iefix') format('embedded-opentype'),
-    url('fonts/futura_medium-webfont.woff') format('woff'),
-    url('fonts/futura_medium-webfont.ttf') format('truetype'),
-    url('fonts/futura_medium-webfont.svg#futura_md_btmedium') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'futura_lt_btlight';
-    src: url('fonts/futurabt-light-webfont.eot');
-    src: url('fonts/futurabt-light-webfont.eot?#iefix') format('embedded-opentype'),
-    url('fonts/futurabt-light-webfont.woff') format('woff'),
-    url('fonts/futurabt-light-webfont.ttf') format('truetype'),
-    url('fonts/futurabt-light-webfont.svg#futura_lt_btlight') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'futura_ltcn_btlight';
-    src: url('fonts/futura_light_condensed-webfont.eot');
-    src: url('fonts/futura_light_condensed-webfont.eot?#iefix') format('embedded-opentype'),
-    url('fonts/futura_light_condensed-webfont.woff') format('woff'),
-    url('fonts/futura_light_condensed-webfont.ttf') format('truetype'),
-    url('fonts/futura_light_condensed-webfont.svg#futura_ltcn_btlight') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@body-font: "Gill Sans", "Gill Sans MT",'Open Sans', Calibri, sans-serif;
-@body-bold:'Futura Condensed Medium','futura_mdcn_btmedium', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
-@title-font:'Futura Condensed Medium','futura_mdcn_btmedium', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
-@title-light:'Futura Condensed Light','futura_ltcn_btlight', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+@body-font: 'Lato', sans-serif;
+@body-bold:'Open Sans Condensed', sans-serif;
+@title-font:'Open Sans Condensed', sans-serif;
