--- a/public/css/index.less
+++ b/public/css/index.less
@@ -11,14 +11,6 @@
 
 
 
-// TYPOGRAPHY PRESETS
-
-
-
-// none
-
-// MIXINS
-
 
 
 .text-outline(@radius, @color) {
@@ -80,6 +72,25 @@ a {
     clear:left;
     font:14px Helvetica,Arial,sans-serif;
     text-align: center;
+}
+
+.scrollup{
+
+    z-index: 99;
+    width:50px;
+    height:40px;
+    opacity:1;
+    position:fixed;
+    bottom:50px;
+    right:100px;
+    display:none;
+    text-indent:-9999px;
+    background-image: url('../img/ui/arrow_gray.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    transform:rotate(-90deg);
+-ms-transform:rotate(-90deg); /* IE 9 */
+-webkit-transform:rotate(-90deg); /* Safari and Chrome */
 }
 
 #top {
@@ -238,7 +249,7 @@ ol, ul {
       height: 40%;
       overflow-y: auto;
       font-size: 0.8571em;
-      padding: 0 .5em;
+      padding: .5em;
       height: 9em;
       p {
         margin: 0;
@@ -246,6 +257,7 @@ ol, ul {
     }
   }
   #sidebar-list {
+    border-top:10px solid #bbbdbf;
     position:absolute;
     width:100%;
     max-height:50%;
@@ -324,16 +336,13 @@ ol, ul {
   font-size: 14px;
   max-width: 100%;
   .title {
+  font-size:1.3em;
     text-align: center;
     height: 40px;
 //    background-color: @title-bg;
     color:@black-text;
     padding: 0;
     overflow: hidden;
-    // cursor: grab;
-    // cursor: -moz-grab;
-    // cursor: -webkit-grab;
-    // .user-select(none);
     
     #home {
       float: left;
@@ -353,12 +362,24 @@ ol, ul {
   //    margin-bottom: 20px;
       vertical-align: baseline;
     }
+    h3 {
+      display: inline;
+      font-family: @title-font;
+      font-size: 1em;
+      font-weight: normal;
+      line-height: 40px;
+      letter-spacing: 0.1em;
+      max-width: 50%;
+      padding: 0;
+      margin: 0;
+  //    margin-bottom: 20px;
+      vertical-align: baseline;
+    }
 
   }
   .photo {
-    // .user-select(none);
     max-width: 100%;
-    max-height:160px;
+    height:168px;
     //background-color: rgba(58, 58, 63, 0.85);
     text-align: center;
     img {
@@ -375,9 +396,12 @@ ol, ul {
         width: 50%;
         float: left;
         font-size: 1em;
-        font-family: @body-bold;
+          font-family: @body-font;
         //font-weight: bold;
         padding-top: 20px;
+        .sub-address {
+          font-weight:300;
+        }
       }
       .icons {
         // .user-select(none);
