--- a/public/css/index.less
+++ b/public/css/index.less
@@ -230,6 +230,19 @@ ol, ul {
     z-index: 100;
   }
 }
+#photo_large {
+    display: none;
+    position: absolute;
+    max-width: 80%;
+    //float:left;
+    padding: 10px;
+    top: 60px;
+    left: 60px;
+    z-index: 9999;
+    background-color: #2C2C38;
+    img {
+    }
+}
 #sidebar {
   font-family: @title-font;
   font-size: 1.5em;
@@ -378,16 +391,18 @@ ol, ul {
     }
 
   }
-  .photo {
-    max-width: 100%;
+  #photo {
+    width: 100%;
     height:168px;
+    overflow:hidden;
     //background-color: rgba(58, 58, 63, 0.85);
-    text-align: center;
+    // text-align: center;
     img {
-      max-height: 100%;
-      max-width: 100%;
+      //max-height: 100%;
+      width: 100%;
     }
   }
+
   .info {
     //background-color: rgba(255, 255, 255, 0.90);
     padding: 0.5em;
