--- a/public/css/index.less
+++ b/public/css/index.less
@@ -240,7 +240,9 @@ ol, ul {
     left: 60px;
     z-index: 9999;
     background-color: #2C2C38;
+    cursor: -webkit-zoom-out; cursor: -moz-zoom-out;
     img {
+      max-width: 100%
     }
 }
 #sidebar {
@@ -395,6 +397,7 @@ ol, ul {
     width: 100%;
     height:168px;
     overflow:hidden;
+    cursor: -webkit-zoom-in; cursor: -moz-zoom-in;
     //background-color: rgba(58, 58, 63, 0.85);
     // text-align: center;
     img {
