--- a/public/css/index.less
+++ b/public/css/index.less
@@ -76,7 +76,7 @@ a {
 
 .scrollup{
 
-    z-index: 99;
+    z-index: 1000;
     width:50px;
     height:40px;
     opacity:1;
@@ -125,7 +125,7 @@ a {
       padding:1.4em 0 0 0;
       li:hover ul {
         display:block;
-        z-index: 99;
+        z-index: 1000;
       }
         li {
             cursor:pointer;
@@ -233,16 +233,21 @@ ol, ul {
 #photo_large {
     display: none;
     position: absolute;
-    max-width: 80%;
+    max-width: 85%;
     //float:left;
     padding: 10px;
-    top: 60px;
-    left: 60px;
+    top: 50px;
+    left: 25px;
     z-index: 9999;
-    background-color: #2C2C38;
-    cursor: -webkit-zoom-out; cursor: -moz-zoom-out;
-    img {
+    background-color: #bbbdbf;
+    //cursor: -webkit-zoom-out; cursor: -moz-zoom-out;
+    #large-photo {
       max-width: 100%
+    }
+    #close-icon {
+      position: absolute;
+      top: 10px;
+      right: 10px;
     }
 }
 #sidebar {
@@ -395,14 +400,23 @@ ol, ul {
   }
   #photo {
     width: 100%;
-    height:168px;
+    max-height:168px;
     overflow:hidden;
-    cursor: -webkit-zoom-in; cursor: -moz-zoom-in;
+    position: relative;
+    //cursor: -webkit-zoom-in; cursor: -moz-zoom-in;
     //background-color: rgba(58, 58, 63, 0.85);
-    // text-align: center;
-    img {
-      //max-height: 100%;
-      width: 100%;
+     text-align: center;
+    #preview-photo {
+      min-height: 100%;
+      max-width: 100%;
+      max-width: 358px;
+    }
+    #popout
+    {
+      position: absolute;
+      bottom: 5px;
+      left: 5px;
+      max-width: 20px;
     }
   }
 
