preview photo width

--- a/public/css/index.less
+++ b/public/css/index.less
@@ -408,7 +408,7 @@ ol, ul {
      text-align: center;
     #preview-photo {
       min-height: 100%;
-      max-width: 100%;
+      min-width: 100%;
       max-width: 358px;
     }
     #popout
