--- a/public/css/index.less
+++ b/public/css/index.less
@@ -247,7 +247,7 @@ ol, ul {
     #close-icon {
       position: absolute;
       top: 10px;
-      right: 10px;
+      left: 10px;
     }
 }
 #sidebar {
@@ -262,8 +262,8 @@ ol, ul {
   // padding: 10px;
   #place {
     position: absolute;
-    max-height:50%;
-    //overflow-y: hidden;
+    max-height:58%;
+    overflow-y: auto;
     width: 100%;
     .description {
       height: 40%;
