--- a/public/css/index.less
+++ b/public/css/index.less
@@ -435,7 +435,7 @@ ol, ul {
     {
       position: absolute;
       bottom: 5px;
-      left: 5px;
+      right: 5px;
       max-width: 20px;
     }
   }
