container width, new logo

--- a/public/css/index.less
+++ b/public/css/index.less
@@ -46,10 +46,10 @@ a {
 
 .container {
     clear:both;
-    width: 95%;
+//    width: 95%;
     max-width: @container-width;
     margin:0 auto;
-    padding: 0 2%;
+    padding: 0;
     h1 {
         text-transform: uppercase;
         text-align: center;
