--- a/public/css/index.less
+++ b/public/css/index.less
@@ -120,7 +120,8 @@ a {
       float:right;   
       text-align: right;
       width:70%;
-      padding:1.4em 0 0 0;
+      vertical-align: bottom;
+      padding:35px 0 0 0;
       li ul.show {
         display:block;
         z-index: 1000;
