--- a/public/css/index.less
+++ b/public/css/index.less
@@ -22,7 +22,7 @@
 @black-text:#231F20;
 
 html {
-    background: url('../img/pattern1.jpg') repeat #fff;
+//    background: url('../img/pattern1.jpg') repeat #fff;
   //  font-family: 'futuramedium', sans-serif;
   font-family: @body-font;
   font-size: 14px;
