--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,5 +1,25 @@
-<ul class="nav">
-  <% if user_signed_in? %>
+
+<section id='top'>
+
+        <div class = title-div>
+           <a href = "index.html" id="home-link" class="nav-main"><img src="img/uw_title_key_white.png" alt='UrbanWander'></a>
+        </div>
+        <ul id='nav'>
+          <li><a  id="adventures-link" class="nav-main">adventures</a>
+            <ul class = "menu">
+              <li><a data-route=1>POPOS</a></li>
+              <li><a data-route=6>Beautiful views</a></li>
+              <li><a data-route=7>Kids corner</a></li>
+              <li><a data-route=5>Let's Get Physical</a></li>
+              <li><a data-adventure="All Places">All Places</a></li>
+              <li><a data-adventure="Needs Photos">Needs Photos</a></li>
+            </ul>
+          </li>
+          <li><a href = "mailto:info@urbanwander.org" class="nav-main">contact</a></li>
+          <li>
+            <ul class = "user-links">
+            
+            <% if user_signed_in? %>
     <li>
     <%= link_to('Logout', destroy_user_session_path, :method=>'delete') %>
     </li>
@@ -22,4 +42,7 @@
     <%= link_to('Sign up', new_user_registration_path)  %>
     </li>
   <% end %>
-</ul>
+  </ul>
+          </li>
+          </ul>
+      </section>
