--- a/public/css/index.less
+++ b/public/css/index.less
@@ -4,9 +4,9 @@
 
 @background:            #dcdcdc;
 @container-width:       1024px;
-@title-bg:      #2c2c38;
-@detail-width:  20%;
-
+@title-bg:              #2c2c38;
+@detail-width:          20%;
+@black-text:            #231F20;
 
 
 
@@ -19,7 +19,6 @@
 }
 
 // LAYOUT
-@black-text:#231F20;
 
 html {
 //    background: url('../img/pattern1.jpg') repeat #fff;
@@ -233,7 +232,7 @@ ol, ul {
 #photo-large {
     display: none;
     position: absolute;
-    max-width: 94%;
+    max-width: 100%;
     //float:left;
     padding: 10px;
     // padding-top: 40px;
@@ -282,7 +281,7 @@ ol, ul {
   #place {
     position: absolute;
     //max-height:58%;
-    overflow-y: hidden;
+    //overflow-y: hidden;
     width: 100%;
     .description {
       height: 40%;
