deleted photos that aren't in use, took out app info on homepage

--- a/public/css/index.less
+++ b/public/css/index.less
@@ -26,7 +26,7 @@ html {
   //  font-family: 'futuramedium', sans-serif;
   font-family: @body-font;
   font-size: 14px;
-  padding-bottom: 40px;
+  //padding-bottom: 40px;
   color:@black-text;
 }
 h1, h2, h3, h4, h5, h6 {
@@ -599,15 +599,15 @@ ol, ul {
 }
 
 #news-and-updates {
-    padding-top: 1em;
+    margin-top: 6em;
     a {
-        color: #777;
+        color: #DDD;
         text-decoration: none;
         border-bottom: 1px dotted #777;
     }
     .no-ul {
         border:none;
-        color:black;
+        color:#AAA;
     }
     .column {
         padding: 0;
@@ -622,6 +622,9 @@ ol, ul {
             overflow-x: hidden;
            // font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
            font-family: @body-font;
+       }
+       img {
+        max-height: 50px;
        }
    }
    #news {
@@ -659,9 +662,14 @@ ol, ul {
 footer {
     clear: both;
     text-align: center;
-    padding-top: 30px;
+    padding: 2em;
     color: #aaa;
     font-size: 12px;
+    background-color: #2C2C38;
+    width:100%;
+    box-sizing: border-box;
+
+
 }
 
 
